--- a/scraper/tsconfig.json
+++ b/scraper/tsconfig.json
@@ -17,9 +17,11 @@
     "resolveJsonModule": true,
     "isolatedModules": true,
     "noEmit": true,
-    "jsx": "react"
+    "jsx": "react",
+    "typeRoots": [ "./types", "./node_modules/@types" ]
   },
   "include": [
-    "src"
-  ]
+    "src", "types/index.d.ts"
+  ],
+  "exclude": ["node_modules", "types"]
 }
