--- a/scraper/package.json
+++ b/scraper/package.json
@@ -40,6 +40,7 @@
     ]
   },
   "devDependencies": {
-    "@types/tesseract.js": "0.0.2"
+    "@types/tesseract.js": "0.0.2",
+    "@types/webpack-env": "^1.15.2"
   }
 }
