--- a/scraper/package.json
+++ b/scraper/package.json
@@ -13,6 +13,7 @@
     "@types/react-dom": "^16.9.8",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-hotkeys-hook": "^2.2.2",
     "react-scripts": "3.4.1",
     "react-use": "^15.3.3",
     "tesseract.js": "^2.1.1",
