--- a/scraper/package.json
+++ b/scraper/package.json
@@ -11,6 +11,7 @@
     "@types/node": "^12.12.53",
     "@types/react": "^16.9.43",
     "@types/react-dom": "^16.9.8",
+    "fuse.js": "^6.4.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-hotkeys-hook": "^2.2.2",
