--- a/scraper/package.json
+++ b/scraper/package.json
@@ -1,48 +1,20 @@
 {
-  "name": "interpreter",
+  "name": "scraper",
   "version": "0.1.0",
   "private": true,
-  "dependencies": {
-    "@material-ui/core": "^4.11.0",
-    "@testing-library/jest-dom": "^4.2.4",
-    "@testing-library/react": "^9.5.0",
-    "@testing-library/user-event": "^7.2.1",
-    "@types/jest": "^24.9.1",
-    "@types/node": "^12.12.53",
-    "@types/react": "^16.9.43",
-    "@types/react-dom": "^16.9.8",
-    "fuse.js": "^6.4.1",
-    "react": "^16.13.1",
-    "react-dom": "^16.13.1",
-    "react-hotkeys-hook": "^2.2.2",
-    "react-scripts": "3.4.1",
-    "react-use": "^15.3.3",
-    "tesseract.js": "^2.1.1",
-    "typescript": "^3.7.5"
-  },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "dev": "next dev",
+    "build": "next build",
+    "start": "next start"
   },
-  "eslintConfig": {
-    "extends": "react-app"
-  },
-  "browserslist": {
-    "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
-    ],
-    "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
-    ]
+  "dependencies": {
+    "next": "9.5.1",
+    "react": "16.13.1",
+    "react-dom": "16.13.1"
   },
   "devDependencies": {
-    "@types/tesseract.js": "0.0.2",
-    "@types/webpack-env": "^1.15.2"
+    "@types/node": "^14.0.27",
+    "@types/react": "^16.9.44",
+    "typescript": "^3.9.7"
   }
 }
