--- a/scraper/package.json
+++ b/scraper/package.json
@@ -5,16 +5,30 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "start": "next start"
+    "start": "next start",
+    "link:screenshots": "ln -s ~/geom/screenshots $GEOM_ROOT/scraper/public/screenshots"
   },
   "dependencies": {
+    "@material-ui/core": "^4.11.0",
+    "fuse.js": "^6.4.1",
+    "glob": "^7.1.6",
     "next": "9.5.1",
     "react": "16.13.1",
-    "react-dom": "16.13.1"
+    "react-dom": "16.13.1",
+    "react-hotkeys-hook": "^2.2.2",
+    "react-use": "^15.3.3",
+    "tesseract.js": "^2.1.1"
   },
   "devDependencies": {
+    "@testing-library/jest-dom": "^4.2.4",
+    "@testing-library/react": "^9.5.0",
+    "@testing-library/user-event": "^7.2.1",
+    "@types/glob": "^7.1.3",
+    "@types/jest": "^24.9.1",
     "@types/node": "^14.0.27",
     "@types/react": "^16.9.44",
+    "@types/react-dom": "^16.9.8",
+    "@types/tesseract.js": "0.0.2",
     "typescript": "^3.9.7"
   }
 }
