--- a/scraper/package.json
+++ b/scraper/package.json
@@ -10,12 +10,15 @@
   },
   "dependencies": {
     "@material-ui/core": "^4.11.0",
+    "@material-ui/icons": "^4.9.1",
+    "directory-tree": "^2.2.4",
     "fuse.js": "^6.4.1",
-    "glob": "^7.1.6",
     "next": "9.5.1",
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "react-hotkeys-hook": "^2.2.2",
+    "react-query": "^2.5.13",
+    "react-query-devtools": "^2.4.2",
     "react-use": "^15.3.3",
     "tesseract.js": "^2.1.1"
   },
@@ -23,7 +26,6 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
-    "@types/glob": "^7.1.3",
     "@types/jest": "^24.9.1",
     "@types/node": "^14.0.27",
     "@types/react": "^16.9.44",
